fundo e telefone posicionado

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>Rede Socias</title>
 </head>
 <body> 
-    
+    <main>
+        <section id="telefone">
+
+        </section>
+        
+        <section id="redesociais">
+
+        </section>
+    </main>
 </body>
 </html>
