--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body> 
     <main>
         <section id="telefone">
-
+            <iframe src="/home.html" frameborder="0" id="tela" name="tela"></iframe>
         </section>
-        
+
         <section id="redesociais">
 
         </section>
