--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
     <main>
         <section id="telefone">
             <iframe src="/home.html" frameborder="0" id="tela" name="tela"></iframe>
+             Seu navegador não é compativel acesse este link.
         </section>
 
         <section id="redesociais">
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a><br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
 
         </section>
     </main>
