--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body> 
     <main>
         <section id="telefone">
-            <iframe src="/home.html" frameborder="0" id="tela" name="tela"></iframe>
-             Seu navegador não é compativel acesse este link.
+            <iframe src="/home.html" frameborder="0" id="tela" name="tela"> Seu navegador não é compativel acesse este link.</iframe>
+         
         </section>
 
         <section id="redesociais">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a><br>
-            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
+            <a href="/home.html" target="tela"><img src="imagens/logo-home.jpg" alt="home"></a><br>
+            <a href="/youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a><br>
+            <a href="/github.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a><br>
+            <a href="/instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a><br>
+            <a href="/twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a><br>
+            <a href="/facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
 
         </section>
     </main>
